# ki18n

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5I18nConfig.cmake.in  KF6I18nConfig.cmake.in  README.md  conanfile.py  metainfo.yaml
autotests/: CMakeLists.txt  Test.qml  kcountrysubdivisiontest.cpp  kcountrytest.cpp  ki18ndeclarativetest.cpp  klazylocalizedstringtest.cpp  klocalizedstringtest.cpp  klocalizedstringtest.h  ktranscriptcleantest.cpp  ktranscriptcleantest.h  ktranscripttest.cpp  ktranscripttest.h  pythontest.py  qtcatalogtest.cpp  test.js  test.qml  testhelpers.cpp  testhelpers.h
autotests/ki18n_install/: CMakeLists.txt
autotests/po/fr/: ki18n-test.po
cmake/: FindIntl.cmake  FindLibIntl.cmake  KF5I18NMacros.cmake  KF5I18NMacros.cmake.in  KF5I18nMacros.cmake.in  KF6I18nMacros.cmake.in  build-pofiles.cmake  build-tsfiles.cmake  kf5i18nuic.cmake  kf6i18nuic.cmake  rules_PyKF5.py  ts-pmap-compile.py
docs/: programmers-guide.dox  programmers-guide.md
po/af/: ki18n5.po  ki18n6.po
po/ar/: ki18n5.po  ki18n6.po
po/as/: ki18n5.po  ki18n6.po
po/ast/: ki18n5.po  ki18n6.po
po/az/: ki18n5.po  ki18n6.po
po/be/: ki18n5.po  ki18n6.po
po/be@latin/: ki18n5.po  ki18n6.po
po/bg/: ki18n5.po  ki18n6.po
po/bn/: ki18n5.po  ki18n6.po
po/bn_IN/: ki18n5.po  ki18n6.po
po/br/: ki18n5.po  ki18n6.po
po/bs/: ki18n5.po  ki18n6.po
po/ca/: ki18n5.po  ki18n6.po
po/ca@valencia/: ki18n5.po  ki18n6.po
po/crh/: ki18n5.po  ki18n6.po
po/cs/: ki18n5.po  ki18n6.po
po/csb/: ki18n5.po  ki18n6.po
po/cy/: ki18n5.po  ki18n6.po
po/da/: ki18n5.po  ki18n6.po
po/de/: ki18n5.po  ki18n6.po
po/el/: ki18n5.po  ki18n6.po
po/en_GB/: ki18n5.po  ki18n6.po
po/eo/: ki18n5.po  ki18n6.po
po/es/: ki18n5.po  ki18n6.po
po/et/: ki18n5.po  ki18n6.po
po/eu/: ki18n5.po  ki18n6.po
po/fa/: ki18n5.po  ki18n6.po
po/fi/: ki18n5.po  ki18n6.po
po/fr/: ki18n5.po  ki18n6.po
po/fy/: ki18n5.po  ki18n6.po
po/ga/: ki18n5.po  ki18n6.po
po/gd/: ki18n5.po  ki18n6.po
po/gl/: ki18n5.po  ki18n6.po
po/gu/: ki18n5.po  ki18n6.po
po/ha/: ki18n5.po  ki18n6.po
po/he/: ki18n5.po  ki18n6.po
po/hi/: ki18n5.po  ki18n6.po
po/hne/: ki18n5.po  ki18n6.po
po/hr/: ki18n5.po  ki18n6.po
po/hsb/: ki18n5.po  ki18n6.po
po/hu/: ki18n5.po  ki18n6.po
po/hy/: ki18n5.po  ki18n6.po
po/ia/: ki18n5.po  ki18n6.po
po/id/: ki18n5.po  ki18n6.po
po/ie/: ki18n5.po  ki18n6.po
po/is/: ki18n5.po  ki18n6.po
po/it/: ki18n5.po  ki18n6.po
po/ja/: ki18n5.po  ki18n6.po
po/ka/: ki18n5.po  ki18n6.po
po/kk/: ki18n5.po  ki18n6.po
po/km/: ki18n5.po  ki18n6.po
po/kn/: ki18n5.po  ki18n6.po
po/ko/: ki18n5.po  ki18n6.po
po/ku/: ki18n5.po  ki18n6.po
po/lb/: ki18n5.po  ki18n6.po
po/lt/: ki18n5.po  ki18n6.po
po/lv/: ki18n5.po  ki18n6.po
po/mai/: ki18n5.po  ki18n6.po
po/mk/: ki18n5.po  ki18n6.po
po/ml/: ki18n5.po  ki18n6.po
po/mr/: ki18n5.po  ki18n6.po
po/ms/: ki18n5.po  ki18n6.po
po/nan_TW@latin/: ki18n6.po
po/nb/: ki18n5.po  ki18n6.po
po/nds/: ki18n5.po  ki18n6.po
po/ne/: ki18n5.po  ki18n6.po
po/nl/: ki18n5.po  ki18n6.po
po/nn/: ki18n5.po  ki18n6.po
po/oc/: ki18n5.po  ki18n6.po
po/or/: ki18n5.po  ki18n6.po
po/pa/: ki18n5.po  ki18n6.po
po/pl/: ki18n5.po  ki18n6.po
po/ps/: ki18n5.po  ki18n6.po
po/pt/: ki18n5.po  ki18n6.po
po/pt_BR/: ki18n5.po  ki18n6.po
po/ro/: ki18n5.po  ki18n6.po
po/ru/: ki18n5.po  ki18n6.po
po/sa/: ki18n6.po
po/se/: ki18n5.po  ki18n6.po
po/si/: ki18n5.po  ki18n6.po
po/sk/: ki18n5.po  ki18n6.po
po/sl/: ki18n5.po  ki18n6.po
po/sq/: ki18n5.po  ki18n6.po
po/sr/: ki18n5.po  ki18n6.po
po/sr@ijekavian/: ki18n5.po  ki18n6.po
po/sr@ijekavianlatin/: ki18n5.po  ki18n6.po
po/sr@latin/: ki18n5.po  ki18n6.po
po/sv/: ki18n5.po  ki18n6.po
po/ta/: ki18n5.po  ki18n6.po
po/te/: ki18n5.po  ki18n6.po
po/tg/: ki18n5.po  ki18n6.po
po/th/: ki18n5.po  ki18n6.po
po/tr/: ki18n5.po  ki18n6.po
po/tt/: ki18n5.po  ki18n6.po
python/: CMakeLists.txt  bindings.h  bindings.xml
src/: CMakeLists.txt  common_helpers.cpp  common_helpers_p.h  config.h.in  gettext.h  isocodes_p.h  isocodescache.cpp  isocodescache_p.h  kcatalog.cpp  kcatalog_p.h  kcountry.cpp  kcountry.h  kcountrysubdivision.cpp  kcountrysubdivision.h  klocalizedcontext.cpp  klocalizedcontext.h  klocalizedstring.cpp  klocalizedstring.h  klocalizedtranslator.cpp  klocalizedtranslator.h  ktimezone.cpp  ktimezone.h  ktranscript.cpp  ktranscript_p.h  kuitmarkup.cpp  kuitmarkup.h  kuitmarkup_p.h  main.cpp  mapentry_p.h
src/i18n/: CMakeLists.txt  common_helpers_p.h  config.h.in  kcatalog.cpp  kcatalog_p.h  ki18n-index.qdoc  ki18n.qdoc  ki18n.qdocconf  klazylocalizedstring.cpp  klazylocalizedstring.h  klocalization.h  klocalizedcontext.cpp  klocalizedcontext.h  klocalizedspinbox.cpp  klocalizedstring.cpp  klocalizedstring.h  klocalizedtranslator.h  ktranscript.cpp  ktranscript_p.h  kuitmarkup.cpp  kuitmarkup.h  kuitmarkup_p.h  kuitsetup.cpp  kuitsetup.h  kuitsetup_p.h  main.cpp
src/i18n-qml/: CMakeLists.txt  KI18nImpl.qml  attached.cpp  attached.h  ki18nqml.qdoc  ki18nqml.qdocconf  klocalizedqmlcontext.cpp  klocalizedqmlcontext.h  localizedcontext.cpp  localizedcontext.h
src/i18n/compatheaders/: KuitMarkup  kuitmarkup.h
src/localedata/: CMakeLists.txt  isocodes_p.h  isocodescache.cpp  isocodescache_p.h  kcountry.cpp  kcountry.h  kcountrysubdivision.cpp  kcountrysubdivision.h  ki18nlocaledata.qdoc  ki18nlocaledata.qdocconf  ktimezone.h  mapentry_p.h  spatial_index_entry_p.h  spatial_index_p.h  spatial_index_property_p.h  timezonedata_p.h
src/localedata-qml/: CMakeLists.txt  ki18nlocaledataqml.qdoc  ki18nlocaledataqml.qdocconf  ki18nlocaledataqmlplugin.cpp  qmldir
src/localedata/cachegen/: CMakeLists.txt
src/localedata/data/: timezone_country_map.cpp
src/localedata/qgis/: generate-geographic-data.py
src/qgis/: .gitignore  TimezoneTableTasks.py  config.py  generate-geographic-data.py
src/qml/: CMakeLists.txt  ki18nqmlplugin.cpp  qmldir  qmldir.license
tests/: CMakeLists.txt  demo.qml  module.qml  spinbox.cpp
(+31 files in other folders)
